--- a/example/package.json
+++ b/example/package.json
@@ -5,14 +5,16 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js", 
+    "start": "node server.js",
     "dev": "npx nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.3",
+    "express": "^4.18.3"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.0"
   }
 }
