--- a/server/package.json
+++ b/server/package.json
@@ -16,5 +16,8 @@
     "express": "^4.18.3",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
